--- a/package.json
+++ b/package.json
@@ -9,9 +9,14 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@walletconnect/web3-provider": "^1.7.5",
+    "ethers": "^5.6.2",
+    "graphql": "^16.3.0",
+    "graphql-request": "^4.2.0",
     "next": "12.1.1",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "web3modal": "^1.9.5"
   },
   "devDependencies": {
     "@types/node": "17.0.23",
@@ -19,6 +24,7 @@
     "@types/react-dom": "17.0.14",
     "eslint": "8.12.0",
     "eslint-config-next": "12.1.1",
+    "sass": "^1.49.9",
     "typescript": "4.6.3"
   }
 }
